working on safari render issues

--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -122,11 +122,14 @@ text color: #BFC0C0 */
 /* helps with hovering issues*/
 .card-space {
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     align-items: center;
+    -webkit-box-align: center;
     width: 36rem;
     height: 38rem;
-    perspective: 600px;
+    perspective: 1000px;
+    -webkit-perspective: 1000px;
     margin: 1rem;
 }
  
@@ -135,7 +138,9 @@ text color: #BFC0C0 */
     height: 100%;
     position: relative;
     transition: transform 1750ms;
+    -webkit-transition: transform 1750ms;
     transform-style: preserve-3d;
+    -webkit-transform-style: preserve-3d;
     background-color: #f9f9f9;
     border-radius: 0.5rem;
 }
@@ -146,12 +151,15 @@ text color: #BFC0C0 */
     height: 100%;
     width: 100%;
     backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .card-front, .card-back {
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
     align-items: center;
+    -webkit-box-align: center;
     padding-top: 3%;
     /* background: red; */
 }
@@ -175,13 +183,16 @@ text color: #BFC0C0 */
 .card-title, .card-links {
     height: 100%;
     display: flex;
+    display: -webkit-flex;
     justify-content: center;
     align-items: center;
+    -webkit-box-align: center;
 }
 
 .card-back {
-    /* background: blue; */
     transform: rotateY(180deg);
+    -webkit-transform: rotateY(180deg);
+    /* background: blue; */
 }
 
 .card-info {
