--- a/css/style-reset.css
+++ b/css/style-reset.css
@@ -104,6 +104,7 @@ h2 {
 
 * {
   box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 .container {
